--- a/incidentFormgb.html
+++ b/incidentFormgb.html
@@ -289,7 +289,7 @@
 
 
 
-        <div class="mt-3">
+        <div>
 			<p><label for="yes_no_radio" class="form-label">Has immediate safety needs been met?</label>
 			<input type="radio"  name="yes_no_radio" id="yes1" checked><label for="yes1">Yes</label>
 			<input type="radio" name="yes_no_radio" id="no1"><label for="no1">No</label></p>
